--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -38,15 +38,7 @@
 
 .fotLayout ul{
     display: flex;
-}
-
- .fotLayout{
     flex-direction: column;
-    align-items: center;
-}
-
-.fotLayout ul{
-    flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
