--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -1,16 +1,14 @@
 @import "variables";
 
-
-
+    
 
 /*TITULO*/
 
 .title{
 
-    color:black;
+
+    @include estilotitulos(black,sans-serif,13px);
     text-align: center;
-    font-size: 13px;
-    font-family: $fuente-ppal;
     padding: 56px;
     margin-top: 30px;
     margin-bottom: 20px;
@@ -44,7 +42,6 @@
     /*SECCIONES*/
 
 .card {
-
     background-color: white;
     padding: 20px;
     margin: 30px;
@@ -52,20 +49,16 @@
     text-align: center;   
 
     .subTitle{
-        text-decoration: none;
-        color: $color-primario;
-        font-family: $fuente-ppal;
-        font-size: 13px;
+        @include estilotitulos(darkred,sans-serif,15px)
     }
 
     .cardBody{ 
-
-        font-family:$fuente-ppal;
-        font-size: 15px;
-        color: black;
+        @include estilotitulos(black,sans-serif,15px);
         margin: 15px;
         padding: 15px;
     }
 
 }  
 
+
+    
