carrousel en clientes, arreglos diseno, arreglos texto, correcion keywords y descrip

--- a/SCSS/_imagenes.scss
+++ b/SCSS/_imagenes.scss
@@ -10,7 +10,12 @@
     display: none;
     }
     
- .imgstretch2{
+.imgstretch2{
     width: 100%;
     margin-top: 20px;
     }
+
+.imgstretch3{
+   width: 200px;
+   align-items: center;
+}
