--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -56,7 +56,12 @@
     font-size: 15px;
     text-decoration: none;
     margin: 15px;
-    padding: 15px; }
+    padding: 15px;
+    text-align: justify; }
+  .card .AlternativeText {
+    text-align: center;
+    font-size: 20px;
+    text-align: justify; }
 
 .botonprimario, .buttonform {
   height: 30px;
@@ -198,6 +203,10 @@ h3 {
 .imgstretch2 {
   width: 100%;
   margin-top: 20px; }
+
+.imgstretch3 {
+  width: 200px;
+  align-items: center; }
 
 /*MEDIAMIN600*/
 @media only screen and (min-width: 600px) {
