--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -56,8 +56,10 @@
         @include estilotitulos(black,sans-serif,15px);
         margin: 15px;
         padding: 15px;
+        text-align: justify;
     }
 
+    .AlternativeText{ text-align: center; font-size: 20px; text-align: justify;}
 }  
 
 
